--- a/app/src/main/res/layout/layout_feed_author.xml
+++ b/app/src/main/res/layout/layout_feed_author.xml
@@ -14,13 +14,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
+        android:layout_marginBottom="@dimen/dp_10"
         android:paddingLeft="@dimen/dp_15"
         android:paddingRight="@dimen/dp_15">
 
-        <ImageView
+        <com.beantechs.ppjoke.view.CustomImageView
             android:id="@+id/avatar"
             android:layout_width="@dimen/dp_40"
             android:layout_height="@dimen/dp_40"
+            app:image_url="@{user.avatar}"
+            app:isCircle="@{true}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
