--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,19 @@
     <dimen name="dp_15">15dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="sp_14">14sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+    <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_20">20dp</dimen>
+    <dimen name="dp_20">20dp</dimen>
+    <dimen name="sp_12">12sp</dimen>
+    <dimen name="dp_0">0dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
+    <dimen name="dp_36">36dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_8">8dp</dimen>
+    <dimen name="sp_10">10sp</dimen>
+    <dimen name="dp_45">45dp</dimen>
+    <dimen name="dp_44">44dp</dimen>
+    <dimen name="dp_4">4dp</dimen>
 </resources>
