首页简单搭建

--- a/app/src/main/res/layout/layout_feed_interaction.xml
+++ b/app/src/main/res/layout/layout_feed_interaction.xml
@@ -40,7 +40,7 @@
             app:icon="@{feed.ugc.hasLiked?@drawable/icon_cell_liked:@drawable/icon_cell_like}"
             app:iconGravity="textStart"
             app:iconPadding="@dimen/dp_4"
-            app:iconTint="@{feed.ugc.hasLiked?@color/theme:@color/color_3d3}"
+            app:iconTint="@{feed.ugc.hasLiked?@color/color_theme:@color/color_3d3}"
             tools:icon="@drawable/icon_cell_like"
             tools:iconTint="@color/color_theme"
             tools:text="1000"
@@ -58,7 +58,7 @@
             app:icon="@{feed.ugc.hasdiss?@drawable/icon_cell_dissed:@drawable/icon_cell_diss}"
             app:iconGravity="textStart"
             app:iconPadding="@dimen/dp_4"
-            app:iconTint="@{feed.ugc.hasdiss?@color/theme:@color/color_3d3}"
+            app:iconTint="@{feed.ugc.hasdiss?@color/color_theme:@color/color_3d3}"
             tools:icon="@drawable/icon_cell_diss"
             tools:iconTint="@color/color_theme"
             tools:text="@string/diss"
