--- a/app/src/main/res/layout/layout_feed_type_video.xml
+++ b/app/src/main/res/layout/layout_feed_type_video.xml
@@ -30,10 +30,9 @@
             app:feedText="@{feed.feeds_text}" />
 
 
-        <!--        图片和视频区域-->
-
-        <com.beantechs.ppjoke.view.CustomImageView
-            android:id="@+id/feed_image"
+        <!--  视频区域-->
+        <com.beantechs.ppjoke.view.ListPlayerView
+            android:id="@+id/list_player_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_10" />
