--- a/app/src/main/res/layout/layout_feed_top_comment.xml
+++ b/app/src/main/res/layout/layout_feed_top_comment.xml
@@ -28,7 +28,10 @@
         android:layout_marginRight="@dimen/dp_15"
         android:layout_marginBottom="@dimen/dp_10"
         android:background="@color/color_gray"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingBottom="@dimen/dp_10"
+        android:visibility="@{comment==null?View.GONE:View.VISIBLE}">
 
         <ImageView
             android:layout_width="wrap_content"
