--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,6 @@
     <dimen name="dp_45">45dp</dimen>
     <dimen name="dp_44">44dp</dimen>
     <dimen name="dp_4">4dp</dimen>
+    <dimen name="dp_16">16dp</dimen>
+    <dimen name="dp_30">30dp</dimen>
 </resources>
